@@ -1156,14 +1156,23 @@ all of the names in the tools library, for use defining keybindings
  
  (proc-doc/names
   drracket:language-configuration:add-language
-  ((and/c (is-a?/c drracket:language:language<%>)
-          drracket:language:object/c)
-   . -> . void?)
-  (language)
+  (->* ((and/c (is-a?/c drracket:language:language<%>)
+               drracket:language:object/c))
+       (#:allow-executable-creation? boolean?)
+       void?)
+  ((language) ((allow-executable-creation? #f)))
   
   @{@phase[2]
      
-     Adds @racket[language] to the languages offerend by DrRacket.})
+     Adds @racket[language] to the languages offered by DrRacket.
+     
+     If @racket[allow-executable-creation?] is @racket[#f], then
+     choosing the @onscreen{Create Executable...} menu item results
+     in a dialog box saying that executable creation is disabled.
+     If it is @racket[#t], then the 
+     @method[drracket:language:language<%> create-executable]
+     is called when that menu item is selected (after checking
+     to make sure the file is saved).})
  
  (proc-doc/names
   drracket:language-configuration:get-settings-preferences-symbol
